--- a/app-gateway/CMakeLists.txt
+++ b/app-gateway/CMakeLists.txt
@@ -13,6 +13,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_SOURCE_DIR}/OttServices
+    ${CMAKE_SOURCE_DIR}/../Supporting_Files
     ${CMAKE_SOURCE_DIR}/../../Supporting_Files
 )
 
